--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,12 @@
     <a class="<% if request.fullpath == related_hashtags_path %>active <% end %>item" href="<%= related_hashtags_path %>">
       <i class="blue tags icon"></i> Related hashtags
     </a>
+    <a class="<% if request.fullpath == related_hashtags_path %>active <% end %>item" href="<%= related_hashtags_path %>">
+      <i class="red apple icon"></i> Who updated?
+    </a>
+    <a class="<% if request.fullpath == related_hashtags_path %>active <% end %>item" href="<%= related_hashtags_path %>">
+      <i class="green users icon"></i> Who was mentioned?
+    </a>
   </div>
 
   <div class="content">
