forgot the modal view oops

--- a/app/views/home/related_hashtags.html.erb
+++ b/app/views/home/related_hashtags.html.erb
@@ -1,3 +1,4 @@
+<%= render 'tweet_modal' %>
 <% label_colors = ['black', 'green', 'red', 'blue', 'orange', 'purple', 'teal'] %>
 <div class="ios7">
   <div class="ui icon header">
