apply updated, with sentiment

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <a class="<% if request.fullpath == related_hashtags_path %>active <% end %>item" href="<%= related_hashtags_path %>">
       <i class="blue tags icon"></i> Related hashtags
     </a>
-    <a class="<% if request.fullpath == related_hashtags_path %>active <% end %>item" href="<%= related_hashtags_path %>">
+    <a class="<% if request.fullpath == who_updated_path %>active <% end %>item" href="<%= who_updated_path %>">
       <i class="red apple icon"></i> Who updated?
     </a>
     <a class="<% if request.fullpath == related_hashtags_path %>active <% end %>item" href="<%= related_hashtags_path %>">
