implement which users are mentioned

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,11 +1,11 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.content .ui.header .sub.header {
+#content .ui.header .sub.header {
   color: #888;
 }
 
-.content .ui.header {
+#content .ui.header {
   margin-left: 10px;
 }
 
